# machine-learning-explained

./: .gitignore  pyproject.toml
notebooks/: generative_learning_algoritms.ipynb  linear_regression.ipynb
projects/: 1.1-Bank-marketing.ipynb  1.1-bank-marketing.ipynb  1.3-adulterated-wine-detector.ipynb  README.md  mushroom_classifier.ipynb
projects/flu-shot-learning/notebooks/: 1_selection.ipynb  2_preprocessing.ipynb  3_transformation.ipynb  4_data_mining.ipynb
projects/kdd/: 1_selection.ipynb  2_pre_processing.ipynb  3_transformation.ipynb  4_data_mining.ipynb  5_evaluation.ipynb
projects/kdd-2/: 1_selection.ipynb  2_pre_processing.ipynb  3_transformation.ipynb  4_data_miming.ipynb  5_evaluation.ipynb
projects/kdd-2/a/: kdd_adult.ipynb
src/: _autograd.py  generative.py  regression.py
