[project]
name = "machine-learning-explained"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "e>=1.4.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# [tool.ruff]
# line-length = 100
# indent-width = 4

# [tool.ruff.lint]
# select = [
# 	"ALL",
# ]
# ignore = [
# 	"B905",    # zip() without an explicit strict= parameter
# 	"D100",    # Missing docstring in public module
# 	"D101",    # Missing docstring in public class
# 	"D103",    # Missing docstring in public function
# 	"D104",    # Missing docstring in public package
# 	"T201",    # print() found
# 	"PLR0913", # Too many arguments in function definition
#     "S301",    # pickle module found
# ]

# [tool.ruff.format]
# quote-style = "double"
# indent-style = "space"
# skip-magic-trailing-comma = false
# line-ending = "auto"